--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,11 @@
 # Logging level (DEBUG, INFO, WARNING, ERROR, CRITICAL)
 LOG_LEVEL=INFO
 
+# Database Configuration
+# For development (SQLite): sqlite:///./gmail_pubsub.db
+# For production (PostgreSQL): postgresql://user:password@host:port/database
+DATABASE_URL=sqlite:///./gmail_pubsub.db
+
 # Gmail Watch Configuration
 # Comma-separated list of Gmail labels to watch (default: INBOX)
 # Examples: INBOX, INBOX,IMPORTANT, INBOX,SENT,DRAFTS
