--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,27 +8,43 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    # Web framework
+    "fastapi>=0.119.0",
+    "uvicorn>=0.37.0",
+    
+    # Google Cloud libraries
     "google-cloud-pubsub>=2.18.0",
     "google-api-python-client>=2.100.0",
     "google-auth>=2.23.0",
     "google-auth-oauthlib>=1.1.0",
     "google-auth-httplib2>=0.2.0",
     "google-cloud-secret-manager>=2.16.0",
+    
+    # Database
+    "sqlalchemy>=2.0.0",
+    "psycopg2-binary>=2.9.0",  # PostgreSQL driver
+    "aiosqlite>=0.19.0",       # Async SQLite support
+    
+    # Data validation and parsing
+    "pydantic>=2.0.0",
+    "beautifulsoup4>=4.14.2",
+    
+    # Configuration and utilities
     "pyyaml>=6.0",
     "python-dotenv>=1.0.0",
     "requests>=2.31.0",
-    "fastapi>=0.119.0",
-    "uvicorn>=0.37.0",
-    "beautifulsoup4>=4.14.2",
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
     "pytest-cov>=4.1.0",
+    "pytest-asyncio>=0.21.0",  # For testing async functions
     "black>=23.7.0",
     "flake8>=6.0.0",
     "mypy>=1.5.0",
+    "httpx>=0.28.1",           # For testing HTTP endpoints
+    "faker>=19.0.0",           # For generating test data
 ]
 
 [build-system]
