--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,16 @@ google-auth-oauthlib>=1.1.0
 google-auth-httplib2>=0.2.0
 google-cloud-secret-manager>=2.16.0
 
+# Database
+sqlalchemy>=2.0.0
+psycopg2-binary>=2.9.0  # PostgreSQL driver
+aiosqlite>=0.19.0       # Async SQLite support
+
+# Data validation and parsing
+pydantic>=2.0.0
+beautifulsoup4>=4.14.2
+
 # Configuration and utilities
 pyyaml>=6.0
 python-dotenv>=1.0.0
 requests>=2.31.0
-beautifulsoup4>=4.14.2
